--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
 <!DOCTYPE HTML>
-<!--
-	Prologue by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
-		<title>Prologue by HTML5 UP</title>
+		<title>Welcome To My Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,9 +15,9 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
-							<h1 id="title">Jane Doe</h1>
-							<p>Hyperspace Engineer</p>
+							<span class="image avatar48"><img src="images/profile.jpg" alt="" /></span>
+							<h1 id="title">Sudipta Das</h1>
+							<p>Software Engineer</p>
 						</div>
 
 					<!-- Nav -->
@@ -60,14 +55,13 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Hi! I'm <strong>Prologue</strong>, a <a href="http://html5up.net/license">free</a> responsive<br />
-								site template designed by <a href="http://html5up.net">HTML5 UP</a>.</h2>
-								<p>Ligula scelerisque justo sem accumsan diam quis<br />
-								vitae natoque dictum sollicitudin elementum.</p>
+								<h2 class="alt">Hi! I'm <strong>Sudipta Das</strong>, a Software Engineer</h2>
+								<p>I Have Graduated From American International University-Bangladesh (AIUB)<br />
+								In Computer Science and Software Engineering.</p>
 							</header>
 
 							<footer>
-								<a href="#portfolio" class="button scrolly">Magna Aliquam</a>
+								<a href="#about" class="button scrolly">Learn More...</a>
 							</footer>
 
 						</div>
@@ -142,15 +136,20 @@
 								<h2>About Me</h2>
 							</header>
 
-							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+							<a href="#" class="image featured"><img src="images/about.jpg" alt="" /></a>
 
-							<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
-							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
-							laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
-							parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
-							dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
-							ornare iaculis.</p>
-
+							<p>I am a Software Engineer from Dhaka, Bangladesh. I graduated from American International University-Bangladeh (AIUB) in Computer Science and Software Engineering (CSSE).
+								 I am a quick learner and very keen on learning new things.
+							</p>
+							<p>At present am working with a leading software company named BMIT Solutions as "Junior Software Developer".
+							   In the job my responsibility is to handel Front-End side. My job is to develop UX of the Software using 
+							   some famous technology framework like React JS, Laravel, Bootstrap. My job is also handeling the data that 
+							   come from the Back-End API or Database.
+							</p>
+							<p>I need to analyze the porblem an ddevelop the basic model. Than I need to implement those ideas using among technologies. 
+							   I need totest the code and debug if I face any kind of abnormal behaviour and fix those problem. My responsibility is also
+							   marge the code that written by others and remove conconflicts.
+							</p>
 						</div>
 					</section>
 
